--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
     <section id="hero-sec" class="hero-sec w-full  bg-cover bg-center h-screen pt-52">
         <p class="hero-bold-txt ">Experience your kind of taste</p>
-        <p id="typed-output" class="hero-bold-txt"><span>How</span> you want it...</p>
+        <p class="hero-bold-txt"><span id="typed-output">How</span> you want it...</p>
         <p class="hero-sub-txt pt-5">From our seasoned chefs on standby to your favorite restuarants, enjoy good deals on great meals and pasteries</p>
         <div class="flex pt-6"><img class="mx-5" src="assets/App-Store-btn.svg" alt="app store button">
             <img src="assets/google-play-btn.svg" alt="google-play-btn">
@@ -94,7 +94,7 @@
     <section class="third-sec bg-black w-full" style="height: 100vh;" >
 
         <section style="background: #fd0000;" class="faq flex rounded-lg w-11/12 mx-auto p-6 space-x-6">
-            <!-- Left side with FAQ list -->
+            
             <div class="faq-list w-1/3 space-y-4">
               <header class="text-xl font-bold text-white mb-4">You asked.</header>
               <ul class="space-y-4">
