--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="bg-transparent nav-scrolled fixed top-0 left-0 right-0 z-50 flex items-center justify-between p-4">
       <div class="logo cursor-pointer">
-        <a href="#hero-sec"><img src="assets/kittchens-logo.svg" class="h-8 w-full mr-10"/></a>
+        <a href="#hero-sec"><img src="assets/kittchens-logo.svg" class="ml-6" style="width: 100%;"/></a>
       </div>
       <div class="flex items-center space-x-32">
       <ul class="links hidden md:flex space-x-6 text-gray-700">
@@ -49,7 +49,7 @@
     </nav>
     <section id="hero-sec" class="hero-sec w-full  bg-cover bg-center h-screen pt-52">
         <p class="hero-bold-txt ">Experience your kind of taste</p>
-        <p class="hero-bold-txt"><span id="typed-output">How</span> you want it...</p>
+        <p class="hero-bold-txt"><span style="color: #fd0000;" id="typed-output">How</span> you want it...</p>
         <p class="hero-sub-txt pt-5">From our seasoned chefs on standby to your favorite restuarants, enjoy good deals on great meals and pasteries</p>
         <div class="flex pt-6"><img class="mx-5" src="assets/App-Store-btn.svg" alt="app store button">
             <img src="assets/google-play-btn.svg" alt="google-play-btn">
